fix tabs in right panel overflow, added sample data folder to gitignore

--- a/client/src/style/sass/common/_node_right-panel.scss
+++ b/client/src/style/sass/common/_node_right-panel.scss
@@ -156,6 +156,7 @@
                             width: 100%;
                             overflow: hidden;
                             -ms-overflow-style: none;
+                            max-height: 28px;
 
                             &::-webkit-scrollbar {
                                 display: none;
